style.css
html, body {
    padding: 0;
    margin: 0 auto;
    background-color: #b6fdfa;
    width: 100%;
    height: 100%;
    text-align: center;
    
    
}

@media screen and (max-width: 600px) {



h1 {
    font-family: Youknowthemoviesong;
    font-size: 38px;
    color:#347D79;
    text-shadow: 2px 2px 2px rgba(52, 125, 121, 0.3);
    white-space: wrap;

}
}

@media screen and (min-width: 601px) {
    h1 {
        font-family: Youknowthemoviesong;
        font-size: 55px;
        color:#347D79;
        text-shadow: 2px 2px 2px rgba(52, 125, 121, 0.3);
        white-space: nowrap;
        
    
    }
}

button {
    margin-top: 0px;
}


.header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 0px;
    width: min(100%);
    height: 120px;
    background-color: rgba(255, 255, 255, 0.541);
    border-bottom: 0px solid rgb(52, 125, 121);
    box-shadow: 1px 1px 5px 3px rgba(52, 125, 121, .3);
    overflow: hidden;
}

.game {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 5%;
    margin-right: 5%;
    width: 90%;
}
/* rock */
.rock {
    margin: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1fr;
    height: 100%;
    border-radius: 1px;
    background-color: #b6fdfa;
    border-radius: 1px;
    box-shadow: 2px 2px 2px 2px rgba(52, 125, 121, .6);
    border:  solid transparent;
}
@media screen and (max-width: 600px) {
    #rock {
        width: 75px;
        height: 75px;
    }
}

@media screen and (min-width: 601px) {
    #rock {
        width: 120px;
        height: 120px;
    }
}


/* Paper */

.paper {
    margin: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1fr;
    height: 100%;
    background-color: #b6fdfa;
    box-shadow: 2px 2px 2px 2px rgba(52, 125, 121, .6);
    border: solid transparent;
    border-radius: 1px;
    
}



@media screen and (max-width: 600px) {
    #paper {
        width: 75px;
        height: 75px;
    }
}

@media screen and (min-width: 601px) {
    #paper {
        width: 120px;
        height: 120px;
    }
}

/* Scissors */
.scissors {
    margin: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1fr;
    height: 100%;
    background-color: #b6fdfa;
    box-shadow: 2px 2px 2px 2px #357e7a99;
    border: solid transparent;
    border-radius: 1px;
    
}


@media screen and (max-width: 600px) {
    #scissors {
        width: 75px;
        height: 75px;
    }
}

@media screen and (min-width: 601px) {
    #scissors {
        width: 120px;
        height: 120px;
    }
}

/* Pseudo classes for buttons */
.rock:hover {
    background-color: rgba(36, 122, 118, .3);
    transform: scale(1.1);
    transition: ease-in .2s;
}

.paper:hover {
    background-color: rgba(36, 122, 118, 0.3);
    transform: scale(1.1);
    transition: ease-in .2s;
}

.scissors:hover {
    background-color: rgba(36, 122, 118, .3);
    transform: scale(1.1);
    transition: ease-in .2s;
}


.rock:focus {
    
    outline: 0;
    background-color: rgba(36, 122, 118, 1);
    border-color:rgba(36, 122, 118, 1);    
   
}

.paper:focus {
    outline: 0;
    background-color: rgba(36, 122, 118, 1);
    border-color:rgba(36, 122, 118, 1);    
}

.scissors:focus {
    outline: 0;
    background-color: rgba(36, 122, 118, 1);
    border-color:rgba(36, 122, 118, 1);    

}

/* class made for the JS counterpart "buttonClick();" */
.scissorss {
     outline: 0;
    background-color: rgba(36, 122, 118, 1);
    border-color:rgba(36, 122, 118, 1);  
}
/*
.result-container {
    width: 100%;
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 50% 50%;
    grid-template-areas: 
                "header header header header"
                "yours computer";
    justify-content: center;
    height: 20%;
    
}
*/


h3 {
    border-bottom: 2px solid;
    
    color: rgba(182, 253, 250, .6);
    font-family: 'Verdana';
    
}

h4 {
    color: rgba(182, 253, 250, .6);
    font-family: 'Verdana';

}

p {
    color:rgba(182, 253, 250, .6);
    font-family: 'Verdana';
    text-align: center;
    font-size: 30px;
}

.resultContainer {
    display: grid;
    grid-gap: 0px;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 15% 30% 15% 40%;
    grid-template-areas: 
            "round round",
            "yourResults compResults",
            "userScore compScore",
            "text text";
            
    background-color: #347d79;
    margin-bottom: 50px;
    margin-top: 10px;
    margin-left: 5%;
    margin-right: 5%;
    border-radius: 5px;
    box-shadow: 3px 3px 5px  rgba(0, 0, 0, .5);
    height: 350px;
}
@media screen and  (min-width: 601px) {
    

.round {
    grid-column: 2/4;
    grid-area: "round";
    justify-content: center;
    align-content: center;
    width: 100%;
    height: 100%;
}
}

@media screen and (max-width: 600px) {
    
    .round {
        grid-column: 1/5;
        grid-area: "round";
        justify-content: center;
        align-content: center;
        width: 100%;
        height: 100%;
    }

}
.results {
    grid-area: "text";
    text-align: center;
    justify-content: center;
    align-content: center;
    grid-area: "box";
    color:  rgba(36, 122, 118, 1);
    font-size: 30px;
    grid-column: 1 / 5;
    width: 100%;
    height: 100%;

}

@media screen and (max-width: 600px) {
.yourResults {
    grid-area: "yourResults";
    text-align: center;
    align-self: center;
    justify-self: center;
    color:rgba(182, 253, 250, .6);
    font-size: 30px;
    grid-column: 1/3;
    width: 100%;
    height: 100%;

}
}
/* ... */

